--- a/inresto/src/app/welcome/join-inresto/join-leftnavigation/join-leftnavigation.component.html
+++ b/inresto/src/app/welcome/join-inresto/join-leftnavigation/join-leftnavigation.component.html
@@ -1,21 +1,28 @@
 
 <div class="col-md-12 join_left_navigation">
-  <div class= "navigation_items left-navigation-text-active">
-      <span class= "navigation_img"><img src= "assets/images/userTable.png"></span>
-      <span class= "navigation_name left-navigation-text-active">Companies and Outlets</span>
-      <span class= "right_icon float-right"><img src= "assets/images/rightArrow.png"></span>
+
+        
+  <div class= "col-md-12 navigation_items float-left" routerLinkActive="active">
+    <a routerLink="/account-settings/company" class= "col-md-12 float-left">
+      <div class= "navigation_img float-left"><img src= "assets/images/userTable.png"></div>
+      <div class= "navigation_name float-left">Companies and Outlets</div>
+      <div class= "right_icon float-right"><img src= "assets/images/rightArrow.png"></div>
+    </a>
   </div>
 
-  <div class= "navigation_items">
-      <span class= "navigation_img"><img src= "assets/images/user.png"></span>
-      <span class= "navigation_name left-navigation-text">Employee Management</span>
-      <span class= "right_icon float-right"><img src= "assets/images/rightArrow.png"></span>
+  
+  <div class= "col-md-12 navigation_items float-left" routerLinkActive="active">
+    <a routerLink="/account-settings/employee" class= "col-md-12 float-left">
+      <div class= "navigation_img float-left"><img src= "assets/images/user.png"></div>
+      <div class= "navigation_name float-left">Employee Management</div>
+      <div class= "right_icon float-right"><img src= "assets/images/rightArrow.png"></div>
+    </a>
   </div>
 
-  <div class= "navigation_items">
-      <span class= "navigation_img"><img src= "assets/images/invoice.png"></span>
-      <span class= "navigation_name left-navigation-text">Subscription and Billing</span>
-      <span class= "right_icon float-right"><img src= "assets/images/rightArrow.png"></span>
+  <div class= "col-md-12 navigation_items float-left" routerLinkActive="active">
+    <a routerLink="/account-settings/subscription" class= "col-md-12 float-left">
+      <div class= "navigation_img float-left"><img src= "assets/images/invoice.png"></div>
+      <div class= "navigation_name float-left">Subscription and Billing</div>
+      <div class= "right_icon float-right"><img src= "assets/images/rightArrow.png"></div>
+    </a>
   </div>
-
-</div>
