--- a/inresto/src/app/welcome/join-inresto/join-leftnavigation/join-leftnavigation.component.scss
+++ b/inresto/src/app/welcome/join-inresto/join-leftnavigation/join-leftnavigation.component.scss
@@ -3,13 +3,26 @@
     height: 80vh;
     padding: 10px 0;
     box-shadow: 0 2px 4px #e0e0e0;
-    // border: 2px solid red;
 }
 
 .navigation_items {
-    padding: 5px 20px;
     margin: 5px 0;
+    padding: 10px 0;
+    color: #d9d9d9;
+    font-size: 12px;
+    cursor: pointer;
 }
+.navigation_items:hover {
+    background: #f2f2f2;
+}
+
+.active {
+    background: #f2f2f2;
+    color: #525252;
+    font-weight: 500;
+    padding: 10px 0;
+}
+
 
 .navigation_img img {
     width: 15px;
@@ -21,4 +34,18 @@
 .navigation_name {
     margin-left: 20px;
     font-size: 12px;
+    cursor: pointer;
+}
+
+a:link {
+    color: inherit;
+    text-decoration: none;
+}
+a:hover {
+    color: inherit;
+    text-decoration: none;
+}
+a:visited {
+    color: inherit;
+    text-decoration: none;
 }
