--- a/inresto/src/app/shared/header/subheader/subheadlerright/subheadlerright.component.html
+++ b/inresto/src/app/shared/header/subheader/subheadlerright/subheadlerright.component.html
@@ -1,4 +1,4 @@
-<div class="ml auto">
+<div class="ml-auto">
     <div class="cddMain locIcn">Select City / Outlet</div>
     <div class="cddMain calIcn">September 23 - October 22</div>
     <div class="cddMain dwnIcn">Download</div>
