--- a/inresto/src/app/shared/login/carousel-config/carousel-config.component.html
+++ b/inresto/src/app/shared/login/carousel-config/carousel-config.component.html
@@ -4,8 +4,7 @@
     <img [src]="banner.bannerUrl" alt="first slide">
     <!-- <img src="assets/images/loginslider1.jpg" alt="first slide">  -->
     <div class="carousel-caption">
-      <img src="assets/images/artboard1.png" alt="">
-      <img src="assets/images/artboard2.png" alt="">
+      <img src="assets/images/artboard.png" alt="" />
       <div class="clearfix"></div>
       <h3>{{banner.bannerName}}</h3>
       <p>{{banner.bannerDescription}}</p>
