--- a/inresto/src/app/shared/login/loginleft/loginleft.component.html
+++ b/inresto/src/app/shared/login/loginleft/loginleft.component.html
@@ -1,5 +1,5 @@
 <div class="loginLeft">
-  <img src="assets/images/loginlogo.png" alt="Inresto">
+  <div class="clearfix text-center"><img class="d-inline-block" src="assets/images/loginlogo.png" alt="Inresto" /></div>
   <div class="clearfix mb45"></div>
   <app-loginemilpassword></app-loginemilpassword>
   <!-- <app-loginpin></app-loginpin> -->
