--- a/inresto/src/app/shared/page-not-found/page-not-found.component.html
+++ b/inresto/src/app/shared/page-not-found/page-not-found.component.html
@@ -1,7 +1,24 @@
-<div class="container">
-  <h2>404: Page not found</h2>
-  <p>
-    We are sorry, the requested page could not be found.
-  </p>
+<div class="container-fluid">
+  <div class="row">
+    <div class="pnfLogo"><img src="assets/images/logo-red.png" alt="" /></div>
+    
+    <div class="pnfContainer">
+      <div class="pnfLeft">
+        <h1>Oops!</h1>
+        <p>We can't seem to find the page you're looking for.</p>
+        <h5>Error code: 404</h5>
+        <p>Here are some Helpful links insteed:</p>
+        <a href="./">Home</a><br/>
+        <a href="javascript:;">Help</a><br/>
+        <a target="_blank" href="http://www.inresto.com/">Inresto.com</a>
+        
+
+
+
+      </div>
+      <div class="float-right"><img src="assets/images/pagenotfound.png" alt="Page Not Found" /></div>  
+    </div>
+    
+  </div> 
 </div>
 
