--- a/inresto/src/app/welcome/dinein/addwalkinpopup/addwalkinpopup.component.html
+++ b/inresto/src/app/welcome/dinein/addwalkinpopup/addwalkinpopup.component.html
@@ -1,4 +1,4 @@
-<button class="cmnBtn" (click)="openLg(content)">Add Walkin</button>
+<button class="cmnBtn addIcon" (click)="openLg(content)">Add Walkin</button>
 <ng-template #content let-c="close" let-d="dismiss">
     <div class="capMain">
         <div class="modal-header">
