--- a/inresto/src/app/welcome/dinein/checkavailabilitypopup/checkavailabilitytables/checkavailabilitytables.component.html
+++ b/inresto/src/app/welcome/dinein/checkavailabilitypopup/checkavailabilitytables/checkavailabilitytables.component.html
@@ -6,7 +6,13 @@
     <p>Date</p>
   </div>
   <div class="col-md-2">
-    <p>AB’s Porur</p>
+    <form>
+        <select>
+          <option>AB’s Porur1</option>
+          <option>AB’s Porur2</option>
+          <option>AB’s Porur3</option>
+        </select>
+    </form>
   </div>
 </div> 
 <div class="row mb-5">
