--- a/inresto/src/app/welcome/dinein/dineindashboard/dineindashboard.component.scss
+++ b/inresto/src/app/welcome/dinein/dineindashboard/dineindashboard.component.scss
@@ -1,39 +1,17 @@
-.navstyling{
-    background: #fff;
-    margin-bottom: 20px;
-}
-.nav-tabs .nav-link.active{
-    border-color: #fff #fff #f76858;
-    font-weight: 600;
-}
-.nav-tabs .nav-link{
-    font-size: 14px;
-    color: #000;
-    border-top-left-radius: 0px;
-    border-top-right-radius: 0px;
-}
-.TabBg{
-    background: #fff;
-    font-size: 12px;
-}
-.TabBg>.active{
-    padding: 10px;
-    
-}
-.live_req{
-    font-size: 16px;
-}
-
-
+:host ::ng-deep .nav-pills{background:#fff;}
+:host ::ng-deep .nav-pills .nav-link{ margin: 0 5px; font-size: 14px; color: #000; border-bottom: 2px solid transparent; border-radius: 0; padding: .65rem 1rem;}
+:host ::ng-deep .nav-pills .nav-link.active{ font-weight: 600; border-color: #f76858; background: transparent}
+.liveRequestMain{background:#fff; padding: 15px 0; margin:17px 0;}
+.liveRequestMain h4{margin-top: 10px;}
 .bookingDetails{
     background: #f2f2f2;
-    padding: 6px 0px;
     margin: 10px 0px;
-    font-size: 14px;
+    font-size: 12px;
 }
 .bookingDetails span{
     padding: 0px 10px;
 }
+.bdDate{font-weight: 600; padding:0 !important;}
 .usernameContainer{
     width: 200px;
     border: 1px solid #f2f2f2;
@@ -46,4 +24,7 @@
     padding: 6px;
     display: table-cell;
     vertical-align: middle;
-}   
+} 
+.dbTable table th, .dbTable table td {text-align: center;vertical-align: middle; border: none;}
+.dbTable table tr:nth-child(even){background-color: #f3f9ff;}
+.dbTable table tr:nth-child(odd){background-color: #fff;}
