--- a/inresto/src/app/welcome/dinein/dineinfilters/dineinfilters.component.html
+++ b/inresto/src/app/welcome/dinein/dineinfilters/dineinfilters.component.html
@@ -1,4 +1,4 @@
-<button class="cmnBtn" (click)="openLg(content)">Filters</button>
+<button class="cmnBtn filterIcon" (click)="openLg(content)"></button>
 <ng-template #content let-c="close" let-d="dismiss">
     <div class="capMain">
         <div class="modal-header">
