--- a/inresto/src/app/welcome/welcome/welcome.component.html
+++ b/inresto/src/app/welcome/welcome/welcome.component.html
@@ -8,7 +8,7 @@
 <!-- <app-restobutton buttonText="Next" color="#ff0000" bgcolor="#00ff00" cornerradius="10px" (setOnClick)="onButtonClick()" ></app-restobutton> -->
 <div class="container-fluid BodyBackground">
     <div class="row subheader">
-        <div class="col-md-6 d-flex justify-content-start">
+        <div class="col-md-6">
             <app-subheadlerleft></app-subheadlerleft>
         </div>
         <div class="col-md-6 d-flex justify-content-end">
@@ -16,10 +16,10 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-sm-3 col-md-3 d-flex justify-content-start">
+        <div class="col-sm-3 col-md-3">
           <app-leftsidebar> </app-leftsidebar>
         </div>
-        <div class="col-sm-9 col-md-9 d-flex justify-content-start">
+        <div class="col-sm-9 col-md-9">
             <app-details></app-details>
         </div>
     </div>
@@ -27,6 +27,3 @@
 </div>
 <!-- <app-footer> </app-footer> -->
 
-<!-- <p>
-  welcome works!
-</p> -->
